# qsv-stats

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/agents/: numerical-accuracy-reviewer.md  perf-reviewer.md  unsafe-auditor.md
.claude/skills/bench-compare/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/scaffold-statistic/: SKILL.md
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md
benches/: freqhb.rs  minmax.rs  modesfreq.rs  online.rs  sortcmp.rs
src/: frequency.rs  lib.rs  minmax.rs  online.rs  sorted.rs  unsorted.rs
