[package]
name          = "qsv-stats"
version       = "0.49.0"                                            #:version
authors       = ["Joel Natividad <joel@dathere.com>"]
description   = "Computing summary statistics on streams."
documentation = "https://docs.rs/qsv-stats"
homepage      = "https://github.com/dathere/qsv-stats"
repository    = "https://github.com/dathere/qsv-stats"
readme        = "README.md"
keywords      = ["statistics", "frequency", "mean", "stddev", "quartiles"]
categories    = ["science", "mathematics"]
license       = "MIT OR Unlicense"
edition       = "2024"
rust-version  = "1.95"

[lib]
name = "stats"

[dependencies]
foldhash   = "0.2"
num-traits = "0.2"
rayon      = "1"
serde      = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name    = "minmax"
harness = false
