[package]
name          = "qsv-stats"
version       = "0.54.3"                                            #:version
authors       = ["Joel Natividad <joel@dathere.com>"]
description   = "Computing summary statistics on streams."
documentation = "https://docs.rs/qsv-stats"
homepage      = "https://github.com/dathere/qsv-stats"
repository    = "https://github.com/dathere/qsv-stats"
readme        = "README.md"
keywords      = ["statistics", "frequency", "mean", "stddev", "quartiles"]
categories    = ["science", "mathematics"]
license       = "MIT OR Unlicense"
edition       = "2024"
rust-version  = "1.96"

[lib]
name = "stats"

[dependencies]
hashbrown  = { version = "0.17", features = ["serde"] }            # default hasher is foldhash 0.2
num-traits = "0.2"
rayon      = "1"
serde      = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.8"
foldhash  = "0.2" # only for the std-vs-hashbrown comparison in benches/freqhb.rs

[[bench]]
name    = "minmax"
harness = false

[[bench]]
name    = "online"
harness = false

[[bench]]
name    = "sortcmp"
harness = false

[[bench]]
name    = "freqhb"
harness = false

[[bench]]
name    = "modesfreq"
harness = false
